--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    
+    <title>JSP</title>
   </head>
-  <body>
+  <body >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+              async
+              src="https://app3.weatherwidget.org/js/?id=ww_0ec8394aca416"
+            ></script>
   </body>
 </html>
