--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <body >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script
-              async
-              src="https://app3.weatherwidget.org/js/?id=ww_0ec8394aca416"
-            ></script>
+    <script>
+      !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+      </script>
   </body>
 </html>
